welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:15: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:18: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:21: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:24: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:27: error: Unmatched closing brace '}' ignored here
}
^