welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	var x=getMondeHauteur()
	var y=getMondeLargeur
	var c:Int=0
	
	for(i <- 1 to x){
		for(j <- 1 to y){c=c+1;ecritMessage(c)}
			
		}
	}
}
